--- a/src/App.css
+++ b/src/App.css
@@ -10,14 +10,14 @@ html {
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-#scroll-container::-webkit-scrollbar {
+#smooth-scroll::-webkit-scrollbar {
   display: none;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
-#scroll-container {
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;      /* Firefox */
+#smooth-scroll {
+  height: 100%;
+  overflow: hidden;
 }
 
 
